update ignore file
ignore unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-/target/
+*.bak
+*.pmd
+**/*.bak
+**/*.class
+*.class
+.classpath
+**/*.jar
+**/*.project
+/.project
+**/*.zip
+**/.metadata
+/.metadata
+**/.pmd
+**/target/*
+**/target/**
+*/target/*
+target/*
+target/**
+bin
+build
